2010-05-27  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: Revert this change as it breaks
	  moon-units. The DRT must be fixed a different way..

2010-05-27  Alan McGovern  <amcgovern@novell.com>

	* PropertyPathWalker.cs: An empty binding ( {Binding} ) means
	  that we bind directly to the ICollectionView if it exists.

2010-05-27  Alan McGovern  <amcgovern@novell.com>

	* CollectionView.cs: Implement the IComparer<object> interface
	  on CollectionView to keep the DRTs happy. It gives the wrong
	  results though...

	* StandardCollectionView.cs: We raise the changing events if
	  either the item or position has changed.

2010-05-27  Alan McGovern  <amcgovern@novell.com>

	* PropertyComparer.cs: If there are no sort descriptions,
	  pretend there was one ascending comparer.

2010-05-27  Alan McGovern  <amcgovern@novell.com>

	* CollectionView.cs:
	* StandardCollectionView.cs:
	* EnumerableCollectionView.cs: Rename StandardCollectionView
	  to be ListCollectionView to keep the DRTs happy. Stupid
	  drts.

2010-05-27  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: If an item is added to the source
	  collection but is filtered out, we shouldn't raise the
	  INCC.Add event.

2010-05-27  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: Propagate the CollectionChanged
	  event when the source collection does a Reset.

2010-05-27  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs:
	* EditableCollectionView.cs: Strip out the
	  IEditableCollectionView properties into the new
	  'EditableCollectionView' class.

2010-05-27  Alan McGovern  <amcgovern@novell.com>

	* CollectionView.cs:
	* StandardCollectionView.cs: Make StandardCollectionView
	  inherit from CollectionView and move all the ICollectionView
	  properties there.

2010-05-26  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionViewGroup.cs: We have to support removing